[package]
name = "iptables"
version = "0.2.2"
authors = ["Navid Fathollahzade <yaa110@gmail.com>", "Pit Kleyersburg <pitkley@googlemail.com>"]

description = "Rust bindings for iptables"
homepage = "https://github.com/yaa110/rust-iptables"
documentation = "https://github.com/yaa110/rust-iptables"
repository = "https://github.com/yaa110/rust-iptables"
readme = "README.md"
keywords = ["iptables", "netfilter", "bindings"]
categories = ["api-bindings"]
license = "MIT"

[lib]
name = "iptables"

[dependencies]
lazy_static = "1.2.0"
regex = "1.1.0"
nix = "0.13.0"
